# atomio

./: Cargo.toml  LICENSE  README.md
src/: element.rs  grammar.pest  lib.rs  main.rs  parser.rs  unit.rs
tests/: composistion.rs  parse.rs
